--- a/package.json
+++ b/package.json
@@ -12,33 +12,40 @@
     "test:watch": "jest --watch"
   },
   "dependencies": {
+    "@payloadcms/db-postgres": "^3.44.0",
+    "@payloadcms/next": "^3.44.0",
+    "@payloadcms/richtext-lexical": "^3.44.0",
+    "@prisma/client": "^5.19.1",
+    "bcryptjs": "^2.4.3",
+    "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
+    "graphql": "^16.11.0",
+    "lucide-react": "^0.446.0",
+    "next": "15.3.0",
+    "next-auth": "^4.24.7",
+    "payload": "^3.44.0",
+    "prisma": "^5.19.1",
     "react": "^18",
     "react-dom": "^18",
-    "next": "15.3.0",
-    "@prisma/client": "^5.19.1",
-    "prisma": "^5.19.1",
-    "next-auth": "^4.24.7",
-    "bcryptjs": "^2.4.3",
-    "zod": "^3.23.8",
-    "clsx": "^2.1.1",
+    "sharp": "^0.34.2",
     "tailwind-merge": "^2.5.2",
-    "lucide-react": "^0.446.0",
-    "date-fns": "^4.1.0"
+    "zod": "^3.23.8"
   },
   "devDependencies": {
-    "typescript": "^5",
+    "@playwright/test": "^1.53.1",
+    "@testing-library/jest-dom": "^6.5.0",
+    "@testing-library/react": "^16.0.1",
+    "@types/bcryptjs": "^2.4.6",
+    "@types/jest": "^29.5.13",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
-    "@types/bcryptjs": "^2.4.6",
-    "postcss": "^8",
-    "tailwindcss": "^3.4.1",
     "eslint": "^8",
     "eslint-config-next": "15.3.0",
     "jest": "^29.7.0",
-    "@testing-library/react": "^16.0.1",
-    "@testing-library/jest-dom": "^6.5.0",
     "jest-environment-jsdom": "^29.7.0",
-    "@types/jest": "^29.5.13"
+    "postcss": "^8",
+    "tailwindcss": "^3.4.1",
+    "typescript": "^5"
   }
 }
