--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,5 @@
 # Database
-DATABASE_URL="postgresql://username:password@localhost:5432/noscere_web"
+POSTGRES_URL="postgresql://username:password@localhost:5432/noscere_web"
 
 # NextAuth
 NEXTAUTH_URL="http://localhost:3000"
